Post-rebase fix