@@ -1,4 +1,4 @@
-package tech.picnic.errorprone.refasterrules;
+package tech.picnic.errorprone.refasterrules.output;
 
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
@@ -8,10 +8,10 @@ import tech.picnic.errorprone.refaster.test.RefasterRuleCollectionTestCase;
 
 final class FileRulesTest implements RefasterRuleCollectionTestCase {
   String testFilesReadStringWithCharset() throws IOException {
-    return new String(Files.readAllBytes(Paths.get("foo")), StandardCharsets.ISO_8859_1);
+    return Files.readString(Paths.get("foo"), StandardCharsets.ISO_8859_1);
   }
 
   String testFilesReadString() throws IOException {
-    return Files.readString(Paths.get("foo"), StandardCharsets.UTF_8);
+    return Files.readString(Paths.get("foo"));
   }
 }
